--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div><!-- .wrapper -->
 
     <section id="details">
-      <div class="wrapper">        
+      <div class="wrapper">
         <div>
           <h3>Contact</h3>
           <p>
@@ -81,7 +81,7 @@
             <a href="#" target="_blank">Twitter</a>
           </p>
         </div>
-      </div>
+      </div><!-- .wrapper -->
     </section>
 
     <footer>
