automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
   </head>
   <body>
     <div class="social">
-      <header>
-        <div class="wrapper">
-          <div id="logo">
-            <h1>Exceptional</h1>
-            <h2>Realty Group</h2>
-          </div>
-          <nav>
-            <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-          </nav>
-        </div><!-- .wrapper -->
-      </header>
+      <a href="#">Twitter</a>
+      <a href="#">Facebook</a>
+      <a href="#">Google Plus</a>
     </div>
+    <header>
+      <div class="wrapper">
+        <div id="logo">
+          <h1>Exceptional</h1>
+          <h2>Realty Group</h2>
+        </div>
+        <nav>
+          <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        </nav>
+      </div><!-- .wrapper -->
+    </header>
 
     <div class="wrapper clearfix">
       <section id="featured-property" class="col-3 first">
